--- a/FinancyApp/FinancyApp/Views/_ViewImports.cshtml
+++ b/FinancyApp/FinancyApp/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using FinancyApp
 @using FinancyApp.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, Syncfusion.EJ2
+
