--- a/FinancyApp/FinancyApp/wwwroot/css/Layout.css
+++ b/FinancyApp/FinancyApp/wwwroot/css/Layout.css
@@ -64,3 +64,12 @@ header {
     height: 100vh;
     overflow: hidden;
 }
+
+a {
+    color: blue;
+    transition: color 0.5s ease;
+}
+
+    a:hover {
+        color: #f6c966;
+    }
