--- a/FinancyApp/FinancyApp/wwwroot/css/Layout.css
+++ b/FinancyApp/FinancyApp/wwwroot/css/Layout.css
@@ -1,4 +1,8 @@
-﻿*{
+﻿html, main{
+    height: 100%
+}
+
+*{
     margin: 0;
     padding: 0;
     list-style: none;
@@ -6,15 +10,15 @@
     box-sizing: border-box;
 }
 
-header {
-    padding: 7vh 50px;
-    position: fixed;
+.navigation{
+    padding-left: 20px;
     background-color: #5C7356;
     height: 100%;
-    position: fixed;
     border: 1px solid #000;
-    background: #5C7356;
+    background: #5B75DC;
+    width: 300px;
 }
+
 
 .heading {
     display: flex;
@@ -26,12 +30,6 @@ header {
 .navigation-list{
     margin:0;
     padding: 0;
-}
-
-.title h1 {
-    font-family: Jura, sans-serif;
-    font-size: 40px;
-    margin-bottom: 30px;
 }
 
 .list-menu{
@@ -66,10 +64,41 @@ header {
 }
 
 a {
-    color: blue;
+    text-decoration:unset;
+    color: black;
     transition: color 0.5s ease;
 }
 
     a:hover {
         color: #f6c966;
     }
+
+.body-content {
+    display: flex !important;
+}
+
+.navigation, .general-content {
+    flex-shrink: 0;
+}
+
+
+.general-content{
+    flex-grow: 1;
+}
+
+
+header, main {
+    flex-shrink: 0;
+}
+
+header {
+    flex-grow: 1;
+}
+
+main {
+    flex-grow: 1;
+}
+
+.header{
+    height:100px;
+}
