--- a/FinancyApp/FinancyApp/wwwroot/css/RegisterPage.css
+++ b/FinancyApp/FinancyApp/wwwroot/css/RegisterPage.css
@@ -3,23 +3,22 @@
 }
 
 .Register-container {
-    max-width: 1220px;
+    background-color: #72ED76;
+    max-width: inherit;
     margin: 0 auto;
-    padding: 100px 10px;
+    padding: 20px 10px;
     display: flex;
     justify-content: center;
 }
 
 .form {
-    max-width: 570px;
-    margin: 0 auto;
+    max-width: 500px;
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
     background-color: #c0c0c0;
-    padding: 100px;
+    padding:20px 35px;
     border-radius: 10px;
-    transition: box-shadow 0.7s;
 }
 
 .group {
