Added Add cost form

--- a/FinancyApp/FinancyApp/Views/Shared/_Layout.cshtml
+++ b/FinancyApp/FinancyApp/Views/Shared/_Layout.cshtml
@@ -67,7 +67,7 @@
                     </li>
                     <li>
                         <img class="img-item" src="~/photos/CreateCosts.png" />
-                        <a class="list-text">Create costs</a>
+                        <a asp-action="Index" asp-controller="Costs" class="list-text">Create costs</a>
                     </li>
                     <li>
                         <img class="img-item" src="~/photos/CreateCategory.png" />
