--- a/FinancyApp/FinancyApp/Views/Category/Info.cshtml
+++ b/FinancyApp/FinancyApp/Views/Category/Info.cshtml
@@ -20,7 +20,7 @@
                 </div>
                 
                 <div class="group">
-                    <input type="color" value="#0000ff">
+                    <input type="color" asp-for="CategoryColor" value="#0000ff">
                     <span asp-validation-for="CategoryColor" class="highlight"></span>
                     <label>Choose a color</label>
                 </div>
