--- a/FinancyApp/FinancyApp/Views/Costs/Index.cshtml
+++ b/FinancyApp/FinancyApp/Views/Costs/Index.cshtml
@@ -6,12 +6,14 @@
 }
 
 <link rel="stylesheet" href="~/css/Breadcrumbs.css" />
+<link rel="stylesheet" href="~/css/account.css" />
 <div class=" container d-flex ">
     <ul class="pagination shadow-lg">
         <li class="page-item "><a class="page-link" asp-action="Index" asp-controller="Home"><i class="fa fa-home "></i> <small>Home</small>  </a></li>
         <li class="page-item active "><a class="page-link " href="#"><i class="fa fa-file  mr-1  ml-0"></i><small>Create cost</small></a></li>
     </ul>
 </div>
+
 <div class="d-flex justify-content-center align-items-center" style="height: 100vh;">
     <div class="card" style="width: 50%;">
         <div class="card-body">
@@ -26,24 +28,21 @@
                 </div>
                 <div class="col-md-4">
                     <label for="amount" class="form-label">Amount</label>
-                    <input asp-for="Amount" type="number" class="form-control" id="amount" required>
+                    <input asp-for="Amount" type="number" min="0"class="form-control" id="amount" required>
                     <div class="invalid-feedback">
                         Amount is required.
                     </div>
                 </div>
                 <div class="col-md-4">
                     <label for="costDate" class="form-label">Cost Date</label>
-                    <input asp-for="CostDate" type="date" class="form-control" id="costDate" required>
+                    <input asp-for="CostDate" type="date" value="@DateTime.Today.ToString("yyyy-MM-dd")" class="form-control" id="costDate" required>
                     <div class="invalid-feedback">
                         Cost date is required.
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div class="form-group">
                     <label for="category" class="form-label">Category</label>
-                    <select class="form-select" id="category" required>
-                        <option selected disabled value="">Choose...</option>
-                        <option value="1">Entartaiment</option>
-                    </select>
+                    <select asp-for="Category" asp-items="@Model.Category" placeholder="@Model.CategoryName" class="form-control"></select>
                     <div class="invalid-feedback">
                         Please select a category.
                     </div>
