--- a/FinancyApp/FinancyApp/Views/Shared/_Layout.cshtml
+++ b/FinancyApp/FinancyApp/Views/Shared/_Layout.cshtml
@@ -71,7 +71,7 @@
                     </li>
                     <li>
                         <img class="img-item" src="~/photos/CreateCategory.png" />
-                        <a class="list-text">Create category</a>
+                        <a asp-action="Info" asp-controller="Category" class="list-text">Category</a>
                     </li>
                     <li>
                         <img class="img-item" src="~/photos/Log-out.png" />
