--- a/FinancyApp/FinancyApp/Views/Shared/_Layout.cshtml
+++ b/FinancyApp/FinancyApp/Views/Shared/_Layout.cshtml
@@ -1,10 +1,12 @@
 ﻿@using Microsoft.AspNetCore.Identity;
 @using DL.Entities;
 @using System.Security.Claims;
+@using BLL.Interfaces
 @using BLL.Services
+@using Microsoft.AspNetCore.Mvc.TagHelpers
 @inject UserManager<AppUser> UserManager
 @inject SignInManager<AppUser> SignInManager
-@inject AppUserService appUserService
+@inject IAppUserService appUserService
 @{
 
 }
