--- a/FinancyApp/FinancyApp/Views/Shared/_Layout.cshtml
+++ b/FinancyApp/FinancyApp/Views/Shared/_Layout.cshtml
@@ -65,7 +65,7 @@
                     </li>
                     <li>
                         <img class="img-item" src="~/photos/YourFinancy.png" />
-                        <a class="list-text">Financy statistics</a>
+                        <a asp-action="Index" asp-controller="Statistics" class="list-text">Financy statistics</a>
                     </li>
                     <li>
                         <img class="img-item" src="~/photos/CreateCosts.png" />
