--- a/FinancyApp/FinancyApp/Views/Statistics/Index.cshtml
+++ b/FinancyApp/FinancyApp/Views/Statistics/Index.cshtml
@@ -42,7 +42,7 @@
    }];
                
     let layoutExpensesByCategory = {
-       title: 'Genres by number of expenses'
+       title: 'Categories by number of expenses'
     };
     
    Plotly.newPlot('expensesByCategory', dataExpensesByCategory, layoutExpensesByCategory);
