add main menu ui

--- a/FinancyApp/FinancyApp/Views/Account/Info.cshtml
+++ b/FinancyApp/FinancyApp/Views/Account/Info.cshtml
@@ -11,11 +11,20 @@
 
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Anonymous+Pro&family=Inter:wght@400;700&family=Jura:wght@300;400;500&family=Montserrat&family=Nunito:wght@200;400&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Anonymous+Pro&family=Inter:wght@400;700&family=Nunito:wght@200;400&display=swap" rel="stylesheet">
+<style>
+    *{
+        font-family: Jura
+    }
+</style>
 
-<header class="header">
-    <h1 class="header-text">Account</h1>
-</header>
+
+<div class="header">
+    <h1 style="padding:20px 20px; font-family: Jura; ">Costs in this category</h1>
+</div>
 
 <div class=" container d-flex ">
     <ul class="pagination shadow-lg">
