--- a/FinancyApp/FinancyApp/Views/Costs/Index.cshtml
+++ b/FinancyApp/FinancyApp/Views/Costs/Index.cshtml
@@ -4,9 +4,15 @@
 @{
 
 }
-
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Anonymous+Pro&family=Inter:wght@400;700&family=Jura:wght@300;400;500&family=Montserrat&family=Nunito:wght@200;400&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="stylesheet" href="~/css/Breadcrumbs.css" />
 <link rel="stylesheet" href="~/css/account.css" />
+<div class="header">
+    <h1 style="padding:20px 20px; font-family: Jura; ">Costs in this category</h1>
+</div>
 <div class=" container d-flex ">
     <ul class="pagination shadow-lg">
         <li class="page-item "><a class="page-link" asp-action="Index" asp-controller="Home"><i class="fa fa-home "></i> <small>Home</small>  </a></li>
@@ -14,7 +20,7 @@
     </ul>
 </div>
 
-<div class="d-flex justify-content-center align-items-center" style="height: 100vh;">
+<div class="d-flex justify-content-center align-items-center" style="height: 75vh;">
     <div class="card" style="width: 50%;">
         <div class="card-body">
             <h1 class="card-title" style="padding:20px 0">Create your cost</h1>
