--- a/FinancyApp/FinancyApp/Views/Account/Info.cshtml
+++ b/FinancyApp/FinancyApp/Views/Account/Info.cshtml
@@ -1,7 +1,8 @@
-﻿@using BLL.Services
+﻿@using BLL.Interfaces;
+@using BLL.Services
 @using FinancyApp.Models;
 @model AppUserViewModel;
-@inject AppUserService appUserService
+@inject IAppUserService appUserService
 @{
     var user = appUserService.GetById(Model.UserId);
 }
