--- a/FinancyApp/FinancyApp/Views/Account/Info.cshtml
+++ b/FinancyApp/FinancyApp/Views/Account/Info.cshtml
@@ -1,7 +1,9 @@
 ﻿@using BLL.Services
 @using FinancyApp.Models;
+@using Microsoft.AspNetCore.Mvc.TagHelpers
+@using BLL.Interfaces
 @model AppUserViewModel;
-@inject AppUserService appUserService
+@inject IAppUserService appUserService
 @{
     var user = appUserService.GetById(Model.UserId);
 }
