--- a/FinancyApp/FinancyApp/Views/Shared/_Layout.cshtml
+++ b/FinancyApp/FinancyApp/Views/Shared/_Layout.cshtml
@@ -83,6 +83,11 @@
                         <img class="img-item" src="~/photos/Log-out.png" />
                         <a asp-action="LogOut" asp-controller="Account" class="list-text">Log out</a>
                     </li>
+                    <li>
+                        <img class="img-item" src="~/photos/questing.png" style="height: 35px; width:35px" />
+                        <a asp-action="Instructions" asp-controller="Account" class="list-text">Instructions</a>
+                    </li>
+
                 }
             </ul>
         </div>
