--- a/FinancyApp/FinancyApp/Views/Category/Info.cshtml
+++ b/FinancyApp/FinancyApp/Views/Category/Info.cshtml
@@ -60,23 +60,14 @@
                         <input asp-for="CategoryName" class="form-control" type="text" required>
                     </div>
                     
-                    <div class="w-25 d-flex flex-column" style="display:none">
-                        <label style="display:none">Choose a color</label>
-                        <input style="display:none"  type="color" asp-for="CategoryColor" value="#0000ff">
+                    <div class="w-25 d-flex flex-column">
+                        <label >Choose a color</label>
+                        <input   type="color" asp-for="CategoryColor" value="#0000ff">
                     </div>
                     
-                    <div class="w-25" style="display:none">
+                    <div class="w-25" >
                         <button class="btn btn-primary btn-lg" type="submit">Add</button>
                     </div>
-                </div>
-
-                <div class="w-25 d-flex flex-column">
-                    <label>Choose a color</label>
-                    <input type="color" asp-for="CategoryColor" value="#0000ff">
-                </div>
-
-                <div class="w-25" style="padding-top:20px;">
-                    <button class="btn btn-primary btn-lg" style="width:200px" type="submit">Add</button>
                 </div>
             </form>
         <div class=" container d-flex ">
